--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,4 +5,4 @@ RUN	apt update && apt install mariadb-server -y
 WORKDIR	/mariadb
 COPY	./tools/mariadb_script.sh .
 
-ENTRYPOINT	["sh", "mariadb_script.sh"]
+ENTRYPOINT	["bash", "mariadb_script.sh"]
