--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /app
 
 COPY	./tools/wordpress_script.sh .
 
-ENTRYPOINT ["sh", "wordpress_script.sh"]
+ENTRYPOINT ["bash", "wordpress_script.sh"]
